[package]
name = "rt-wasm"
version = "0.1.0"
authors = ["Rinik Kumar <rk9109@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
rand_pcg = "0.2"
image = "0.22.4"
getopts = "0.2.21"
indicatif = "0.13.0"

[profile.dev]
codegen-units = 8

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
